# rtype

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  R-Type.sln  README.md  my_credentials
ai/: CMakeLists.txt  IArtificialIntelligence.hpp  Random.h
ai/Basic/: Basic.cpp  Basic.h
ai/Boss/: Boss.cpp  Boss.h  TreeSearch.cpp  TreeSearch.hpp
ai/Circle/: Circle.cpp  Circle.h
ai/Linear/: Linear.cpp  Linear.h
ai/Random/: Random.cpp  Random.h
ai/Sinus/: Sinus.cpp  Sinus.h
gui/: gui.vcxproj  gui.vcxproj.filters
gui/src/: AGameState.h  AWorld.h  GameEngine.cc  GameEngine.h  IGameState.h  IntroState.cc  IntroState.h  PlayState.cc  PlayState.h  PlayWorld.cc  PlayWorld.h  ResourcesManager.h  main.cc
loadlib/: CMakeLists.txt  IArtificialIntelligence.hpp  LoadIa.cc  LoadIa.hpp  dirent.h
loadlib/AI/: Basic.cpp  Basic.h  Circle.cpp  Circle.h  IArtificialIntelligence.hpp  Linear.cpp  Linear.h  Random.cpp  Random.h  Sinus.cpp  Sinus.h
loadlib/AI/dll/basic/: basic.sln
loadlib/AI/dll/basic/Debug/: basic.exp  basic.ilk  basic.lib
loadlib/AI/dll/basic/basic/: IArtificialIntelligence.hpp  Sinus.cpp  Sinus.h  basic.vcxproj  basic.vcxproj.filters  stdafx.cpp
loadlib/AI/dll/basic/basic/Debug/: vc141.idb
loadlib/AI/dll/basic/basic/Debug/basic.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  basic.lastbuildstate  basic.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
resources/: configuration.json
src/: AGameState.h  AWorld.cc  AWorld.h  Components.h  GameEngine.cc  GameEngine.h  IntroState.cc  IntroState.h  IntroWorld.cc  IntroWorld.h  PlayState.cc  PlayState.h  PlayWorld.cc  PlayWorld.h  ResourcesManager.cc  ResourcesManager.h  main.cc
src/GameEngine/: AGameState.h  AWorld.cc  AWorld.h  Animator.cc  Animator.h  ComponentsManager.cc  ComponentsManager.h  GameEngine.cc  GameEngine.h  ResourcesManager.cc  ResourcesManager.h  Settings.h  StatesManager.cc  StatesManager.h  Vector2D.cpp  Vector2D.h
src/GameEngine/Entity/: Component.cpp  Component.h
src/States/: CreateState.cc  CreateState.h  IntroState.cc  IntroState.h  JoinState.cc  JoinState.h  LoginState.cc  LoginState.h  MenuState.cc  MenuState.h  PlayState.cc  PlayState.h
src/ai/: Sinus.h
src/client/: GameConfiguration.cc  GameConfiguration.h  IntroWorld.cc  IntroWorld.h  MenuValue.cc  MenuValue.h  PlayWorld.cc  PlayWorld.h  RandomGenerator.cc  RandomGenerator.h  main.cc
src/client/GameEngine/: AGameState.h  GameEngine.cc  GameEngine.h  LoopTimer.cc  LoopTimer.h  ResourcesManager.cc  ResourcesManager.h  Settings.h  StatesManager.cc  StatesManager.h  Vector2D.h
src/client/GameEngine/Entity/: Component.cpp  Component.h
src/client/GameEngine/ia/: Basic.cpp  Basic.h  Boss.cpp  Boss.hpp  Circle.cpp  Circle.h  IArtificialIntelligence.hpp  Linear.cpp  Linear.h  Random.cpp  Random.h  Sinus.cpp  Sinus.h  TreeSearch.cpp  TreeSearch.hpp
src/client/States/: CreateState.cc  CreateState.h  EndState.cpp  EndState.h  IntroState.cc  IntroState.h  JoinState.cc  JoinState.h  LoginState.cc  LoginState.h  MenuState.cc  MenuState.h  PlayState.cc  PlayState.h  SettingsState.cc  SettingsState.h  WaitingState.cc  WaitingState.h
src/client/network/: NetworkCommunication.h  NetworkManager.cc  NetworkManager.h  TCPNonBlockingCommunication.cc  TCPNonBlockingCommunication.h  UDPNonBlockingCommunication.cc  UDPNonBlockingCommunication.h
src/ia/: Basic.cpp  Basic.h  Boss.cpp  Boss.hpp  Circle.cpp  Circle.h  IArtificialIntelligence.hpp  Linear.cpp  Linear.h  Random.cpp  Random.h  Sinus.cpp  Sinus.h
src/loadlib/: IArtificialIntelligence.hpp  LoadIa.cc  LoadIa.hpp  dirent.h
src/network/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  EndPoint.cc  EndPoint.h  FDSet.cc  FDSet.h  Operation.h  Protocol.cc  Protocol.h  ReactiveSocket.cc  ReactiveSocket.h  Reactor.cc  Reactor.h  Resolver.cc  Resolver.h  Socket.cc  Socket.h  WinSockInit.cc  WinSockInit.h  lw_network_error.h  socket_operations.cc  socket_operations.h
src/server/: Connection.cc  Connection.h  ConnectionManager.cc  ConnectionManager.h  Game.cpp  Game.h  GameLauncher.h  GameLobby.cc  GameLobby.h  GameManager.cc  GameManager.h  Launcher.cc  Launcher.h  LevelLoader.cpp  LevelLoader.hpp  Server.cc  Server.h  main.cc
src/tcp/: Protocol.cc  Protocol.h  RtypeProtocol.cc  RtypeProtocol.h  TcpProtocol.cc  TcpProtocol.h  protocol.h
src/udp/: Events.h  UdpProtocol.cc  UdpProtocol.h
test/: GameManager_test.cc  protocol_test.cc  protocol_udp_test.cc  test.cc
